Minikube/service.yml
#service:
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx-service
#spec:
#  type: NodePort
#  selector:
#    app: nginx
#  ports:
#  - port: 80
#    targetPort: 80
#    nodePort: 30036
#    protocol: TCP

#Task4:
#apiVersion: v1
#kind: Service
#metadata:
#  name: mongo
#spec:
#  type: NodePort
#  selector:
#    app: mongodb
#  ports:
#  - port: 27017
#    targetPort: 27017
#    protocol: TCP
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: mongo-express
#spec:
#  type: NodePort
#  selector:
#    app: mongo-express
#  ports:
#  - port: 8081
#    targetPort: 8081
#    nodePort: 30081


apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: triple-stack
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
